--- a/appOfApps/values.yaml
+++ b/appOfApps/values.yaml
@@ -4,15 +4,15 @@ namespacePrefix: composer-ai-
 
 # Git Repository for the ArgoCD Application
 repo:
-  url: https://github.com/redhat-composer-ai/appOfApps.git # Change This on Fork
-  branch: main
+  url: https://github.com/aokugel/appOfApps.git # Change This on Fork
+  branch: elastic-instance
 
 # Namespace for the ArgoCD Application
 gitops:
   namespaceSuffix: gitops
 
 # Passing this value to all of the sub-applications to make it so we can dynamically figure out urls
-clusterDomain: apps.cluster-c4gwj.c4gwj.sandbox1157.opentlc.com
+clusterDomain: apps.cluster-w2lh7.w2lh7.sandbox1093.opentlc.com
 
 # Default Values File for the Helm Chart
 defaultValuesFile: values.yaml
